feat(unitTest): Some test has been added add_client test has been added. add_school test test has been added. client enroll_in_school test has been added. client join_enrollment_queue test has been added client leave_school test has been added.

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -195,6 +195,7 @@
     "        # \"client assist_course <school_name> <couser_name>\": \"Assist a course in a school.\",\n",
     "        \"client show_list\": \"Show the list of clients in the system.\",\n",
     "        # \"client take_exam <client_name> <course_name> <exam_name>\": \"Allow a student to take an exam of a enrolled course.\",\n",
+    "        \"client remove_client <client_name>\": \"Removes the client from the agents.\",\n",
     "        \"quit\": \"q: Exit the simulation.\"\n",
     "    }\n",
     "    \n",
@@ -205,7 +206,7 @@
     "            self.school_stack.push(school.name)\n",
     "            school.enroll_in_school(self.name)\n",
     "        else:\n",
-    "            print(f'{self.name} is already enrolled in {self.school_stack.peek()}.')\n",
+    "            print(f'Client {self.name} is already enrolled in {self.school_stack.peek()}.')\n",
     "    \n",
     "    def leave_school(self):\n",
     "            if not self.school_stack.is_empty():\n",
@@ -213,7 +214,7 @@
     "                if school_name: \n",
     "                    school = self.agent_manager.get_agent_by_name(school_name, School)\n",
     "                    if school:\n",
-    "                        school.remove_student(self.name)  \n",
+    "                        school.students.remove(self.name)\n",
     "                        print(f'{self.name} exited {school_name}.')\n",
     "                    else:\n",
     "                        print(f\"Error: School '{school_name}' not found.\")\n",
@@ -223,22 +224,35 @@
     "                print(f'{self.name} is not currently enrolled in any school.')\n",
     "    \n",
     "    def join_enrollment_queue(self, school_name, course_name):\n",
-    "        school = self.agent_manager.get_agent_by_name(school_name, School)\n",
-    "        if school:\n",
-    "            if self.name in school.students:\n",
-    "                if course_name in school.courses:\n",
-    "                    school.courses_client_queue.enqueue([course_name, self.name])\n",
-    "                    print(f'{self.name} joined the enrollment queue for {course_name} in {school_name}.')\n",
+    "            school = self.agent_manager.get_agent_by_name(school_name, School)\n",
+    "            if school:\n",
+    "                if self.name in school.students:\n",
+    "                    if course_name in school.courses:\n",
+    "                        already_in_queue = False\n",
+    "                        for item in school.courses_client_queue.queue:\n",
+    "                            if item == [course_name, self.name]:\n",
+    "                                already_in_queue = True\n",
+    "                                break\n",
+    "                        if not already_in_queue:\n",
+    "                            school.courses_client_queue.enqueue([course_name, self.name])\n",
+    "                            print(f'{self.name} joined the enrollment queue for {course_name} in {school_name}.')\n",
+    "                        else:\n",
+    "                            print(f'{self.name} is already in the enrollment queue for {course_name} in {school_name}.')\n",
+    "                    else:\n",
+    "                        print(f'{course_name} is not available in {school_name}.')\n",
     "                else:\n",
-    "                    print(f'{course_name} is not available in {school_name}.')\n",
+    "                    print(f'{self.name} is not enrolled in {school_name}.')\n",
     "            else:\n",
-    "                print(f'{self.name} is not enrolled in {school_name}.')\n",
+    "                print(f\"School '{school_name}' do not exist.\")\n",
     "    \n",
     "    def assist_course(self, course_name):\n",
     "        pass\n",
     "    \n",
     "    def take_exam(self, course_name, exam_name):\n",
     "        pass\n",
+    "    \n",
+    "    def remove_client(self):\n",
+    "        self.agent_manager.remove_agent(self.name)\n",
     "\n",
     "    @classmethod\n",
     "    def help(cls):\n",
@@ -271,6 +285,7 @@
     "        self.students = []  \n",
     "        self.courses = [] \n",
     "        self.courses_client_queue = Queue() \n",
+    "        self.agent_manager = AgentManager() \n",
     "\n",
     "\n",
     "    HELP_MESSAGES = {\n",
@@ -287,6 +302,8 @@
     "        # \"school grade_exam <school_name> <course_name> <client_name> <exam_name>\": \"Grade an exam that the client has taken in a course.\",\n",
     "        # \"school remove_exam_from_course <school_name> <course_name> <exam_name>\": \"Remove an exam from a course if no client has submitted it.\",\n",
     "        # \"school show_exams <school_name> <course_name>\": \"Show the list of exams available for a course at the school.\",\n",
+    "        \"school remove_school <school_name>\": \"Removes the school from the agents.\",\n",
+    "        \n",
     "        \"quit\": \"q: Exit the simulation.\"\n",
     "    }\n",
     "    \n",
@@ -342,6 +359,9 @@
     "    def show_exams(self, school_name, course_name):\n",
     "        pass\n",
     "    \n",
+    "    def remove_school(self):\n",
+    "        self.agent_manager.remove_agent(self.name)\n",
+    "    \n",
     "    # Other methods-----------------------------------------------------------\n",
     "    \n",
     "    def enroll_in_school(self, client_name):\n",
@@ -350,13 +370,6 @@
     "            print(f\"Client '{client_name}' has been enrolled in school '{self.name}'.\")\n",
     "        else:\n",
     "            print(f\"Client '{client_name}' is already enrolled in school '{self.name}'.\")\n",
-    "            \n",
-    "    def leave_school(self, client_name):\n",
-    "        if client_name in self.students:\n",
-    "            self.students.remove(client_name)\n",
-    "            print(f\"Client '{client_name}' has left school '{self.name}'.\")\n",
-    "        else:\n",
-    "            print(f\"Client '{client_name}' is not enrolled in school '{self.name}'.\")\n",
     "\n",
     "    @classmethod\n",
     "    def help(cls):\n",
@@ -391,6 +404,7 @@
     "        self.agent_manager.agents = agents               \n",
     "         \n",
     "        self.ERROR_MESSAGES = {                           \n",
+    "            \"\": \"\",\n",
     "            \"invalid_command\": \"Error: Invalid command.\",\n",
     "            \"school_not_found\": \"Error: School '{name}' not found.\",\n",
     "            \"client_not_found\": \"Error: Client '{name}' not found.\",\n",
@@ -466,20 +480,24 @@
     "                self.agent_manager.save_agents_to_file(file_path)\n",
     "                \n",
     "        elif cmd == 'school':\n",
-    "            if   parts[1] == 'add_school':\n",
+    "            if parts[1] == 'add_school':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"school add_school <school_name>\"):\n",
     "                    _, _, school_name = parts\n",
-    "                    self.agent_manager.add_agent(School, school_name)\n",
-    "                    print(f\"School '{school_name}' added to the system.\")\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"\")\n",
+    "                    if not school:\n",
+    "                        self.agent_manager.add_agent(School, school_name)\n",
+    "                        print(f\"School '{school_name}' added to the system.\")\n",
+    "                    else:\n",
+    "                        print(f\"School '{school_name}' already exists.\")\n",
     "                    \n",
-    "            if   parts[1] == 'create_course':\n",
+    "            elif   parts[1] == 'create_course':\n",
     "                if self.validate_command(parts, 4, \"invalid_format\", \"school create_course <course_name> <school_name>\"):\n",
     "                    _, _, course_name, school_name = parts\n",
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
     "                    if school:\n",
     "                        school.create_course(course_name)     \n",
     "\n",
-    "            if   parts[1] == 'show_courses':\n",
+    "            elif   parts[1] == 'show_courses':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"school show_courses <school_name>\"):\n",
     "                    _, _, school_name = parts\n",
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
@@ -490,12 +508,12 @@
     "                if self.validate_command(parts, 2, \"invalid_format\", \"school show_list\"):\n",
     "                    self.agent_manager.list_agents(School)\n",
     "                    \n",
-    "            elif parts[1] == 'show_students':\n",
-    "                if self.validate_command(parts, 3, \"invalid_format\", \"school show_students <school_name>\"):\n",
+    "            elif   parts[1] == 'remove_school':\n",
+    "                if self.validate_command(parts, 3, \"invalid_format\", \"school remove_school <school_name>\"):\n",
     "                    _, _, school_name = parts\n",
-    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"client_not_found\")\n",
     "                    if school:\n",
-    "                        school.show_students()                       \n",
+    "                        school.remove_school()                    \n",
     "            else:\n",
     "                print(self.ERROR_MESSAGES[\"invalid_command\"])\n",
     "                self.help_school()\n",
@@ -504,8 +522,12 @@
     "            if   parts[1] == 'add_client':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"client add_client <client_name>\"):\n",
     "                    _, _, client_name = parts\n",
-    "                    self.agent_manager.add_agent(Client, client_name)\n",
-    "                    print(f\"Client '{client_name}' added to the system.\")\n",
+    "                    client = self.get_agent_or_error(client_name, Client, \"\")\n",
+    "                    if not client:\n",
+    "                        self.agent_manager.add_agent(Client, client_name)\n",
+    "                        print(f\"Client '{client_name}' added to the system.\")\n",
+    "                    else:\n",
+    "                        print(f\"Client '{client_name}' already exists.\")\n",
     "                    \n",
     "            elif parts[1] == 'enroll_in_school':\n",
     "                if self.validate_command(parts, 4, \"invalid_format\", \"client enroll_in_school <client_name> <school_name>\"):\n",
@@ -532,6 +554,13 @@
     "            elif   parts[1] == 'show_list':\n",
     "                if self.validate_command(parts, 2, \"invalid_format\", \"client show_list\"):\n",
     "                    self.agent_manager.list_agents(Client)\n",
+    "                    \n",
+    "            elif   parts[1] == 'remove_client':\n",
+    "                if self.validate_command(parts, 3, \"invalid_format\", \"client remove_client <client_name>\"):\n",
+    "                    _, _, client_name = parts\n",
+    "                    client = self.get_agent_or_error(client_name, Client, \"client_not_found\")\n",
+    "                    if client:\n",
+    "                        client.remove_client()\n",
     "\n",
     "            else:\n",
     "                print(self.ERROR_MESSAGES[\"invalid_format\"])\n",
@@ -553,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -588,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -633,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -652,10 +681,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "788ad798",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting city simulation... Type 'q' to exit\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "if __name__ == \"__main__\":\n",
