feat(Courses): Class course has been added

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -116,8 +116,11 @@
     "                self.add_agent(School, school_name)\n",
     "                school = self.get_agent_by_name(school_name, School)\n",
     "                school.students = school_data.get(\"students\", [])\n",
-    "                school.courses = school_data.get(\"courses\", [])\n",
-    "                \n",
+    "                for course_name, course_info in school_data.get(\"courses\", {}).items():\n",
+    "                    course = Course(name=course_name)\n",
+    "                    course.students = course_info.get(\"students\", [])\n",
+    "                    course.exams = course_info.get(\"exams\", [])\n",
+    "                    school.courses.append(course)             \n",
     "            for client_name, client_data in data.get(\"clients\", {}).items():\n",
     "                self.add_agent(Client, client_name)\n",
     "                client = self.get_agent_by_name(client_name, Client)\n",
@@ -144,9 +147,16 @@
     "\n",
     "        # Guardar schools\n",
     "        for school in self.filter_agents(School).values():\n",
+    "            courses_data = {}\n",
+    "            for course in school.courses:\n",
+    "                courses_data[course.name] = {\n",
+    "                    \"name\": course.name,\n",
+    "                    \"students\": course.students,\n",
+    "                    \"exams\": course.exams\n",
+    "                }\n",
     "            data[\"schools\"][school.name] = {\n",
     "                \"students\": school.students,\n",
-    "                \"courses\": school.courses\n",
+    "                \"courses\": courses_data\n",
     "            }\n",
     "\n",
     "        # Guardar clients\n",
@@ -175,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -274,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -287,7 +297,6 @@
     "        self.courses_client_queue = Queue()\n",
     "        self.is_open = True \n",
     "\n",
-    "\n",
     "    HELP_MESSAGES = {\n",
     "        \"school add_school <school_name>\": \"Add a new school to the system.\",\n",
     "        \"school create_course <course_name> <school_name>\": \"Create a new course at school.\",\n",
@@ -298,7 +307,7 @@
     "        \"school remove_student <school_name> <client_name>\": \"Remove a student from school.\",\n",
     "        \"school show_list\": \"Show the list of schools in the system\",\n",
     "        \"school close / open <schol_name>\": \"Open / close school, if there isn't students at class\",\n",
-    "        # \"school add_exam_to_course <school_name> <course_name> <exam_name>\": \"Add an exam to a specific course at school.\",\n",
+    "        \"school add_exam_to_course <school_name> <course_name> <exam_name>\": \"Add an exam to a specific course at school.\",\n",
     "        # \"school grade_exam <school_name> <course_name> <client_name> <exam_name>\": \"Grade an exam that the client has taken in a course.\",\n",
     "        # \"school remove_exam_from_course <school_name> <course_name> <exam_name>\": \"Remove an exam from a course if no client has submitted it.\",\n",
     "        # \"school show_exams <school_name> <course_name>\": \"Show the list of exams available for a course at the school.\",\n",
@@ -311,7 +320,7 @@
     "    \n",
     "    def create_course(self, course_name):\n",
     "        if course_name not in self.courses:\n",
-    "            self.courses.append(course_name)\n",
+    "            self.courses.append(Course(course_name))\n",
     "            print(f\"Course '{course_name}' has been created in school '{self.name}'.\")\n",
     "        else:\n",
     "            print(f\"Course '{course_name}' already exists in school '{self.name}'.\")\n",
@@ -325,12 +334,12 @@
     "                print(f\"- {student}\")\n",
     "    \n",
     "    def show_enrollment_queue(self):\n",
-    "        if not self.enrollment_queue:\n",
+    "        if not self.courses_client_queue:\n",
     "            print(f\"No students in the enrollment queue for school '{self.name}'.\")\n",
     "        else:\n",
     "            print(f\"Enrollment queue for school '{self.name}':\")\n",
-    "            for course, student in self.enrollment_queue:\n",
-    "                print(f\"- {student} (Course: {course})\")\n",
+    "            for course, student in self.courses_client_queue:\n",
+    "                print(f\"- {student} (Course: {course})\") \n",
     "    \n",
     "    def admit_student_from_queue(self, school_name, course_name):\n",
     "        pass\n",
@@ -341,14 +350,14 @@
     "        else:\n",
     "            print(f\"Courses in school '{self.name}':\")\n",
     "            for course in self.courses:\n",
-    "                print(f\"- {course}\")\n",
+    "                print(f\"- {course.name}\")\n",
     "    \n",
     "    def remove_student(self, client_name):\n",
     "        if client_name in self.students:\n",
     "            self.students.remove(client_name)\n",
     "            print(f\"Student '{client_name}' has been removed from school '{self.name}'.\")\n",
     "        else:\n",
-    "            print(f\"Student '{client_name}' not found in school '{self.name}'.\")\n",
+    "            print(f\"Student '{client_name}' not found in school '{self.name}'.\")            \n",
     "    \n",
     "    def close(self, school_name):\n",
     "        if not self.is_open:\n",
@@ -368,8 +377,14 @@
     "        else:\n",
     "            print(f\"School '{school_name}' cannot be opened while there are no students enrolled.\")\n",
     "    \n",
-    "    def add_exam_to_course(self, school_name, course_name, exam_name):\n",
-    "        pass\n",
+    "    def add_exam_to_course(self, course_name, exam_name):\n",
+    "        if exam_name in self.exams:\n",
+    "            print(f\"The exam '{exam_name}' already exists and is associated with course '{self.exams[exam_name]}'.\")\n",
+    "        elif course_name in self.courses:\n",
+    "            self.exams[exam_name] = course_name\n",
+    "            print(f\"The exam '{exam_name}' has been added to course '{course_name}'.\")\n",
+    "        else:\n",
+    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
     "    def grade_exam(self, school_name, course_name, client_name, exam_name):\n",
     "        pass\n",
@@ -402,6 +417,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54a23302",
+   "metadata": {},
+   "source": [
+    "## Course"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6fbc5b5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Course():\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.students = []  \n",
+    "        self.exams = [] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b99d400",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -412,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -536,14 +573,14 @@
     "                    if school:\n",
     "                        school.show_students()                       \n",
     "            \n",
-    "            if parts[1] == 'show_enrollment_queue':\n",
+    "            elif parts[1] == 'show_enrollment_queue':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"school show_enrollment_queue <school_name>\"):\n",
     "                    _, _, school_name = parts\n",
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
     "                    if school:\n",
     "                        school.show_enrollment_queue()\n",
     "            \n",
-    "            if parts[1] == 'remove_student':\n",
+    "            elif parts[1] == 'remove_student':\n",
     "                if self.validate_command(parts, 4, \"invalid_format\", \"school remove_student <school_name> <client_name>\"):\n",
     "                    _, _, school_name, client_name = parts\n",
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
@@ -626,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -661,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -706,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -725,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -733,7 +770,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting city simulation... Type 'q' to exit\n"
+      "Starting city simulation... Type 'q' to exit\n",
+      "Error: Invalid command.\n",
+      "Available commands for school:\n",
+      "-school add_school <school_name>: Add a new school to the system.\n",
+      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
+      "-school show_students <school_name>: Show the list of all students registered at school.\n",
+      "-school show_enrollment_queue <school_name>: Show the enrollment queue for the course.\n",
+      "-school show_courses <school_name>: Show the available courses at school.\n",
+      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
+      "-school show_list: Show the list of schools in the system\n",
+      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
+      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
+      "-school remove_school <school_name>: Removes the school from the agents.\n",
+      "-quit: q: Exit the simulation.\n",
+      "School EOI added to the system.\n",
+      "--- Agents loaded successfully from agents.json. --- \n",
+      "Current Client(s):\n",
+      "Available commands for school:\n",
+      "-school add_school <school_name>: Add a new school to the system.\n",
+      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
+      "-school show_students <school_name>: Show the list of all students registered at school.\n",
+      "-school show_enrollment_queue <school_name>: Show the enrollment queue for the course.\n",
+      "-school show_courses <school_name>: Show the available courses at school.\n",
+      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
+      "-school show_list: Show the list of schools in the system\n",
+      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
+      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
+      "-school remove_school <school_name>: Removes the school from the agents.\n",
+      "-quit: q: Exit the simulation.\n",
+      "Course 'Python' has been created in school 'EOI'.\n",
+      "Error: Invalid command.\n",
+      "Available commands for school:\n",
+      "-school add_school <school_name>: Add a new school to the system.\n",
+      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
+      "-school show_students <school_name>: Show the list of all students registered at school.\n",
+      "-school show_enrollment_queue <school_name>: Show the enrollment queue for the course.\n",
+      "-school show_courses <school_name>: Show the available courses at school.\n",
+      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
+      "-school show_list: Show the list of schools in the system\n",
+      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
+      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
+      "-school remove_school <school_name>: Removes the school from the agents.\n",
+      "-quit: q: Exit the simulation.\n"
      ]
     }
    ],
@@ -747,7 +826,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "SIC_Capstone_School",
    "language": "python",
    "name": "python3"
   },
@@ -761,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
