feat(test): Some unitary test has been added.
Co-authored-by: Albaricoq <Albaricoq@users.noreply.github.com>

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -234,26 +234,32 @@
     "                print(f'{self.name} is not currently enrolled in any school.')\n",
     "    \n",
     "    def join_enrollment_queue(self, school_name, course_name):\n",
-    "            school = self.agent_manager.get_agent_by_name(school_name, School)\n",
-    "            if school:\n",
-    "                if self.name in school.students:\n",
-    "                    if course_name in school.courses:\n",
-    "                        already_in_queue = False\n",
-    "                        for item in school.courses_client_queue.queue:\n",
-    "                            if item == [course_name, self.name]:\n",
-    "                                already_in_queue = True\n",
-    "                                break\n",
-    "                        if not already_in_queue:\n",
-    "                            school.courses_client_queue.enqueue([course_name, self.name])\n",
-    "                            print(f'{self.name} joined the enrollment queue for {course_name} in {school_name}.')\n",
-    "                        else:\n",
-    "                            print(f'{self.name} is already in the enrollment queue for {course_name} in {school_name}.')\n",
+    "        school = self.agent_manager.get_agent_by_name(school_name, School)\n",
+    "        if school:\n",
+    "            if self.name in school.students:\n",
+    "                course_exists = False\n",
+    "                for course in school.courses:\n",
+    "                    if course.name == course_name:\n",
+    "                        course_exists = True\n",
+    "                        break\n",
+    "\n",
+    "                if course_exists:\n",
+    "                    already_in_queue = False\n",
+    "                    for item in school.courses_client_queue.queue:\n",
+    "                        if item == [course_name, self.name]:\n",
+    "                            already_in_queue = True\n",
+    "                            break\n",
+    "                    if not already_in_queue:\n",
+    "                        school.courses_client_queue.enqueue([course_name, self.name])\n",
+    "                        print(f'{self.name} joined the enrollment queue for {course_name} in {school_name}.')\n",
     "                    else:\n",
-    "                        print(f'{course_name} is not available in {school_name}.')\n",
+    "                        print(f'{self.name} is already in the enrollment queue for {course_name} in {school_name}.')\n",
     "                else:\n",
-    "                    print(f'{self.name} is not enrolled in {school_name}.')\n",
+    "                    print(f'{course_name} is not available in {school_name}.')\n",
     "            else:\n",
-    "                print(f\"School '{school_name}' do not exist.\")\n",
+    "                print(f'{self.name} is not enrolled in {school_name}.')\n",
+    "        else:\n",
+    "            print(f\"School '{school_name}' do not exist.\")\n",
     "    \n",
     "    def assist_course(self, course_name):\n",
     "        pass\n",
@@ -284,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -296,6 +302,7 @@
     "        self.courses = [] \n",
     "        self.courses_client_queue = Queue()\n",
     "        self.is_open = True \n",
+    "        self.agent_manager = AgentManager() \n",
     "\n",
     "    HELP_MESSAGES = {\n",
     "        \"school add_school <school_name>\": \"Add a new school to the system.\",\n",
@@ -319,7 +326,12 @@
     "    # School methods-------------------------------------------------------------------------------------------------------------------------\n",
     "    \n",
     "    def create_course(self, course_name):\n",
-    "        if course_name not in self.courses:\n",
+    "        course_exists = False\n",
+    "        for course in self.courses:\n",
+    "            if course.name == course_name:\n",
+    "                course_exists = True\n",
+    "                break\n",
+    "        if not course_exists:\n",
     "            self.courses.append(Course(course_name))\n",
     "            print(f\"Course '{course_name}' has been created in school '{self.name}'.\")\n",
     "        else:\n",
@@ -425,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -449,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -564,14 +576,7 @@
     "                    \n",
     "            elif   parts[1] == 'show_list':\n",
     "                if self.validate_command(parts, 2, \"invalid_format\", \"school show_list\"):\n",
-    "                    self.agent_manager.list_agents(School)\n",
-    "                    \n",
-    "            elif   parts[1] == 'remove_school':\n",
-    "                if self.validate_command(parts, 3, \"invalid_format\", \"school remove_school <school_name>\"):\n",
-    "                    _, _, school_name = parts\n",
-    "                    school = self.get_agent_or_error(school_name, School, \"client_not_found\")\n",
-    "                    if school:\n",
-    "                        school.show_students()                       \n",
+    "                    self.agent_manager.list_agents(School)                     \n",
     "            \n",
     "            elif parts[1] == 'show_enrollment_queue':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"school show_enrollment_queue <school_name>\"):\n",
@@ -595,6 +600,14 @@
     "                            school.open(school_name)\n",
     "                        elif cmd == 'close':\n",
     "                            school.close(school_name)\n",
+    "        \n",
+    "            elif   parts[1] == 'remove_school':\n",
+    "                if self.validate_command(parts, 3, \"invalid_format\", \"school remove_school <school_name>\"):\n",
+    "                    _, _, school_name = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"client_not_found\")\n",
+    "                    if school:\n",
+    "                        school.remove_school()  \n",
+    "                        \n",
     "            else:\n",
     "                print(self.ERROR_MESSAGES[\"invalid_command\"])\n",
     "                self.help_school()\n",
@@ -663,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -698,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 58,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -743,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 59,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -762,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -771,48 +784,7 @@
      "output_type": "stream",
      "text": [
       "Starting city simulation... Type 'q' to exit\n",
-      "Error: Invalid command.\n",
-      "Available commands for school:\n",
-      "-school add_school <school_name>: Add a new school to the system.\n",
-      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
-      "-school show_students <school_name>: Show the list of all students registered at school.\n",
-      "-school show_enrollment_queue <school_name>: Show the enrollment queue for the course.\n",
-      "-school show_courses <school_name>: Show the available courses at school.\n",
-      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
-      "-school show_list: Show the list of schools in the system\n",
-      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
-      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
-      "-school remove_school <school_name>: Removes the school from the agents.\n",
-      "-quit: q: Exit the simulation.\n",
-      "School EOI added to the system.\n",
-      "--- Agents loaded successfully from agents.json. --- \n",
-      "Current Client(s):\n",
-      "Available commands for school:\n",
-      "-school add_school <school_name>: Add a new school to the system.\n",
-      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
-      "-school show_students <school_name>: Show the list of all students registered at school.\n",
-      "-school show_enrollment_queue <school_name>: Show the enrollment queue for the course.\n",
-      "-school show_courses <school_name>: Show the available courses at school.\n",
-      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
-      "-school show_list: Show the list of schools in the system\n",
-      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
-      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
-      "-school remove_school <school_name>: Removes the school from the agents.\n",
-      "-quit: q: Exit the simulation.\n",
-      "Course 'Python' has been created in school 'EOI'.\n",
-      "Error: Invalid command.\n",
-      "Available commands for school:\n",
-      "-school add_school <school_name>: Add a new school to the system.\n",
-      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
-      "-school show_students <school_name>: Show the list of all students registered at school.\n",
-      "-school show_enrollment_queue <school_name>: Show the enrollment queue for the course.\n",
-      "-school show_courses <school_name>: Show the available courses at school.\n",
-      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
-      "-school show_list: Show the list of schools in the system\n",
-      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
-      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
-      "-school remove_school <school_name>: Removes the school from the agents.\n",
-      "-quit: q: Exit the simulation.\n"
+      "Current School(s):\n"
      ]
     }
    ],
